# owl

./: .gitignore  000 KANBAN 000.md  0000-00-00.md  2023-07-01.ipynb  2023-07-07.ipynb  2023-07-08.ipynb  2023-07-09.ipynb  2023-07-10.ipynb  2023-07-16.ipynb  2023-07-16b.ipynb  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_chat.md  cmake_install.cmake  crisis_in_science.md  math_history.md  owl.md  owl_2023.md  owl_2024.md  planning_☉♀️☿☽♄♃♂.md  🦉.md
.obsidian/: workspace.json
20231002-scratch/: main.go  server.c  server.cpp  test.asm
c/: CMakeLists.txt  MAIN.md  POSIX.md  a.out.md  app  cmake.md  demo.c  floating-point-precision.md  keywords.md  linking & compiling.md  midi.cpp  pointers.md  r2.md  sockets.md
cpp/: demo.cpp  hello  hello.h
ipynb/: 2024-03-19.ipynb
python/: Python.md  network engineering.md  statistics.md
spicy_noodles/: CCRMA.md  Dirac Delta Function.md  Heavyside Step Function.md  ThinkDSP.md  VA Filter Design.md  WAV format.md  Wave Equation.md  designing audio plugins.md  periodic signals.md  probability density.md  project μ.md  µ++.md
test_docs/: BACKEND.md  Guided Project 4 Ebay Cars.ipynb  Handwashing.ipynb  LOCAL_CLOUD.md  LangChain_Chatbot_Running_Alpaca.ipynb  PASTEUR.md  Pandas_DataFrame_UltraQuick_Tutorial.ipynb  QUARTO.md  dockerize-fastapi.md  find-todos.ipynb  huffman.ipynb  integral_calculus.ipynb  logarithms.ipynb  notes.md  redis-minikube.md  riscv-book.webarchive  seaborn-plot.ipynb  sqlite_demo.ipynb  test.csv  test.html  test.xlsx  test_write.xlsx  textai.ipynb
tools/: LaTeX.md  cmake.md  cmake_chat.md  (+2 more)
(+33 files in other folders)
